--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "buffer": "6.0.3",
     "classnames": "2.3.1",
+    "core-js": "3.19.1",
     "fast-average-color": "7.0.1",
     "gifler": "github:themadcreator/gifler#v0.3.0",
     "image-size": "1.0.0",
     "jquery": "3.6.0",
+    "jquery-binarytransport": "1.0.0",
     "lodash": "4.17.21",
     "moment": "2.29.1",
     "normalize.css": "8.0.1",
@@ -25,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.0.2",
+    "regenerator-runtime": "0.13.9",
     "standardized-audio-context": "25.3.15",
     "tailwindcss": "2.2.19",
     "wicg-inert": "3.1.1"
@@ -62,6 +65,9 @@
   "typesync": {
     "ignoreDeps": [
       "dev"
+    ],
+    "ignorePackages": [
+      "core-js"
     ]
   }
 }
