--- a/client/package.json
+++ b/client/package.json
@@ -46,9 +46,11 @@
     "babel-loader": "8.2.3",
     "cross-env": "7.0.3",
     "css-loader": "6.5.1",
+    "cssnano": "^5.0.14",
     "html-webpack-plugin": "5.5.0",
     "mini-css-extract-plugin": "2.4.5",
     "postcss": "8.3.11",
+    "postcss-custom-properties": "^12.0.1",
     "postcss-import": "14.0.2",
     "postcss-loader": "6.2.0",
     "postcss-preset-env": "7.0.1",
