--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "fast-average-color": "7.0.1",
     "gifler": "github:themadcreator/gifler#v0.3.0",
     "image-size": "1.0.0",
-    "lodash": "4.17.21",
     "moment": "2.29.1",
     "normalize.css": "8.0.1",
     "omggif": "1.0.10",
@@ -34,7 +33,6 @@
     "@babel/core": "7.16.0",
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
-    "@types/lodash": "4.14.177",
     "@types/pako": "1.0.2",
     "@types/react": "17.0.36",
     "@types/react-dom": "17.0.11",
@@ -45,6 +43,7 @@
     "css-loader": "6.5.1",
     "cssnano": "^5.0.14",
     "html-webpack-plugin": "5.5.0",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "2.4.5",
     "postcss": "8.3.11",
     "postcss-custom-properties": "^12.0.1",
