--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,10 @@
     "buffer": "6.0.3",
     "classnames": "2.3.1",
     "core-js": "3.19.1",
+    "dayjs": "^1.10.7",
     "fast-average-color": "7.0.1",
     "gifler": "github:themadcreator/gifler#v0.3.0",
     "image-size": "1.0.0",
-    "moment": "2.29.1",
     "normalize.css": "8.0.1",
     "omggif": "1.0.10",
     "pako": "2.0.4",
