--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "analyze": "cross-env NODE_ENV=development webpack --analyze",
     "prebuild": "rimraf ../dist",
     "build": "npm run prebuild && cross-env NODE_ENV=production webpack",
-    "develop": "cross-env NODE_ENV=development webpack serve"
+    "dev": "cross-env NODE_ENV=development webpack serve"
   },
   "dependencies": {
     "buffer": "6.0.3",
